deploy-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    run: api
spec:
  selector:
    matchLabels:
      run: api
  replicas: 1
  template:
    metadata:
      labels:
        run: api
    spec:
      volumes:
      - name: configmap-volume
        configMap:
          name: nginx-conf
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: configmap-volume
          readOnly: true
