deploy-bg.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bg-deployment
  labels:
    run: background
spec:
  selector:
    matchLabels:
      run: background
  replicas: 1
  template:
    metadata:
      labels:
        run: background
    spec:
      volumes:
      - name: configmap-volume
        configMap:
          name: nginx-conf
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: configmap-volume
          readOnly: true
